# gotl

./: .gitignore  CMakeLists.txt
cmake/: CustomQT5AddTranslation.cmake
include/: compare.hpp  constexpr_string.hpp  foreach.hpp  make_array.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
trash/: array_wrapper.hpp  constexpr_str_utils.hpp  constexpr_string.hpp
